<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText1"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EditText01"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText3"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText4"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/dni"
        android:textColor="#58ACFA" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignRight="@+id/TextView03"
        android:text="@string/apellidos"
        android:textColor="#58ACFA" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditText01"
        android:layout_alignBottom="@+id/EditText01"
        android:layout_alignRight="@+id/TextView02"
        android:text="@string/nombre"
        android:textColor="#58ACFA" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditText02"
        android:layout_alignBottom="@+id/EditText02"
        android:layout_alignRight="@+id/TextView03"
        android:text="@string/equipo"
        android:textColor="#58ACFA" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignRight="@+id/TextView03"
        android:text="@string/telefono"
        android:textColor="#58ACFA" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/direccion"
        android:textColor="#58ACFA" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/title_activity_modificacion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="39dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:focusable="false" />

    <Button
        android:id="@+id/button1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/EditText02"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/pencil"
        android:onClick="modificarInformacion" />

</RelativeLayout>